# simple-console-bank-system

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
include/: account.h  bank_system.h
src/: account.cpp  bank_system.cpp
